--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "^11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "^6.0.3"
+    "next": "^12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3",
+    "remark-unwrap-images": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.14",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "@types/node": "^17.0.36",
+    "@types/react": "18.0.9",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.2"
   }
 }
